kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: user-management:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8088
