kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  type: ClusterIP
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
