kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: user.fia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-management-service
                port:
                  number: 80
